Grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: vm-operator
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.k8s.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
  tls:
    - hosts:
      - grafana.k8s.local
      secretName: sre-ca
